Add gioco, icpieces and libra piece sets

--- a/src/styl/chessground-piece.styl
+++ b/src/styl/chessground-piece.styl
@@ -855,3 +855,102 @@
       background-image url('../../images/pieces/horsey/wK.svg')
     &.black
       background-image url('../../images/pieces/horsey/bK.svg')
+
+/* Gioco */
+.gioco piece
+  &.pawn
+    &.white
+      background-image url('../../images/pieces/gioco/wP.svg')
+    &.black
+      background-image url('../../images/pieces/gioco/bP.svg')
+  &.bishop
+    &.white
+      background-image url('../../images/pieces/gioco/wB.svg')
+    &.black
+      background-image url('../../images/pieces/gioco/bB.svg')
+  &.knight
+    &.white
+      background-image url('../../images/pieces/gioco/wN.svg')
+    &.black
+      background-image url('../../images/pieces/gioco/bN.svg')
+  &.rook
+    &.white
+      background-image url('../../images/pieces/gioco/wR.svg')
+    &.black
+      background-image url('../../images/pieces/gioco/bR.svg')
+  &.queen
+    &.white
+      background-image url('../../images/pieces/gioco/wQ.svg')
+    &.black
+      background-image url('../../images/pieces/gioco/bQ.svg')
+  &.king
+    &.white
+      background-image url('../../images/pieces/gioco/wK.svg')
+    &.black
+      background-image url('../../images/pieces/gioco/bK.svg')
+
+/* ICPieces */
+.icpieces piece
+  &.pawn
+    &.white
+      background-image url('../../images/pieces/icpieces/wP.svg')
+    &.black
+      background-image url('../../images/pieces/icpieces/bP.svg')
+  &.bishop
+    &.white
+      background-image url('../../images/pieces/icpieces/wB.svg')
+    &.black
+      background-image url('../../images/pieces/icpieces/bB.svg')
+  &.knight
+    &.white
+      background-image url('../../images/pieces/icpieces/wN.svg')
+    &.black
+      background-image url('../../images/pieces/icpieces/bN.svg')
+  &.rook
+    &.white
+      background-image url('../../images/pieces/icpieces/wR.svg')
+    &.black
+      background-image url('../../images/pieces/icpieces/bR.svg')
+  &.queen
+    &.white
+      background-image url('../../images/pieces/icpieces/wQ.svg')
+    &.black
+      background-image url('../../images/pieces/icpieces/bQ.svg')
+  &.king
+    &.white
+      background-image url('../../images/pieces/icpieces/wK.svg')
+    &.black
+      background-image url('../../images/pieces/icpieces/bK.svg')
+
+/* Libra */
+.libra piece
+  &.pawn
+    &.white
+      background-image url('../../images/pieces/libra/wP.svg')
+    &.black
+      background-image url('../../images/pieces/libra/bP.svg')
+  &.bishop
+    &.white
+      background-image url('../../images/pieces/libra/wB.svg')
+    &.black
+      background-image url('../../images/pieces/libra/bB.svg')
+  &.knight
+    &.white
+      background-image url('../../images/pieces/libra/wN.svg')
+    &.black
+      background-image url('../../images/pieces/libra/bN.svg')
+  &.rook
+    &.white
+      background-image url('../../images/pieces/libra/wR.svg')
+    &.black
+      background-image url('../../images/pieces/libra/bR.svg')
+  &.queen
+    &.white
+      background-image url('../../images/pieces/libra/wQ.svg')
+    &.black
+      background-image url('../../images/pieces/libra/bQ.svg')
+  &.king
+    &.white
+      background-image url('../../images/pieces/libra/wK.svg')
+    &.black
+      background-image url('../../images/pieces/libra/bK.svg')
