--- a/src/styl/settings.styl
+++ b/src/styl/settings.styl
@@ -272,3 +272,15 @@
     background-image url('../../images/pieces/horsey/wN.svg')
     @media only screen and (min-width 600px)
       background-image url('../../images/pieces/horsey/wP.svg'),url('../../images/pieces/horsey/wN.svg'),url('../../images/pieces/horsey/wB.svg'),url('../../images/pieces/horsey/wR.svg'),url('../../images/pieces/horsey/wQ.svg'),url('../../images/pieces/horsey/wK.svg')
+  &.gioco
+    background-image url('../../images/pieces/gioco/wN.svg')
+    @media only screen and (min-width 600px)
+      background-image url('../../images/pieces/gioco/wP.svg'),url('../../images/pieces/gioco/wN.svg'),url('../../images/pieces/gioco/wB.svg'),url('../../images/pieces/gioco/wR.svg'),url('../../images/pieces/gioco/wQ.svg'),url('../../images/pieces/gioco/wK.svg')
+  &.icpieces
+    background-image url('../../images/pieces/icpieces/wN.svg')
+    @media only screen and (min-width 600px)
+      background-image url('../../images/pieces/icpieces/wP.svg'),url('../../images/pieces/icpieces/wN.svg'),url('../../images/pieces/icpieces/wB.svg'),url('../../images/pieces/icpieces/wR.svg'),url('../../images/pieces/icpieces/wQ.svg'),url('../../images/pieces/icpieces/wK.svg')
+  &.libra
+    background-image url('../../images/pieces/libra/wN.svg')
+    @media only screen and (min-width 600px)
+      background-image url('../../images/pieces/libra/wP.svg'),url('../../images/pieces/libra/wN.svg'),url('../../images/pieces/libra/wB.svg'),url('../../images/pieces/libra/wR.svg'),url('../../images/pieces/libra/wQ.svg'),url('../../images/pieces/libra/wK.svg')
