Indicate when FEN is invalid in editor

--- a/src/styl/editor.styl
+++ b/src/styl/editor.styl
@@ -87,6 +87,9 @@
       padding 5px
     button
       margin-top 10px
+  .error
+    color red
+    margin-top 0.5em
 
 .view-container.light
   .continueFromHere
