Remove useless refs file, preload en-GB

--- a/src/index.mustache
+++ b/src/index.mustache
@@ -11,8 +11,7 @@
     <link rel="preload" href="css/compiled/app.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="fonts/fontawesome-webfont.ttf?v=4.7.0" as="font" crossorigin>
     <link rel="preload" href="fonts/Noto-Sans.ttf" as="font" crossorigin>
-    <link rel="modulepreload" href="i18n/refs.js" />
-    <link rel="modulepreload" href="i18n/en-US.js" />
+    <link rel="modulepreload" href="i18n/en-GB.js" />
     <script>
       window.lichess = {
         mode: "{{appMode}}",
