Fix tournament buttons

--- a/src/styl/button.styl
+++ b/src/styl/button.styl
@@ -61,7 +61,7 @@ button, .li-button
 
 .navigationButtons
   display flex
-  flex-flow row wrap
+  flex-flow row nowrap
   align-items center
   align-self center
   margin 10px 0
