Tweak board name/result margin

--- a/src/styl/board-content.styl
+++ b/src/styl/board-content.styl
@@ -96,9 +96,9 @@
       white-space nowrap
       overflow hidden
       text-overflow ellipsis
+      margin-left 5px
     > .result
       padding 0 5px
-      margin-right 5px
       border-right 1px solid borderColor
   > .player_bar_clock
     flex 0 0 auto
