Fix players board flip during game
Fixes #1996

--- a/src/styl/button.styl
+++ b/src/styl/button.styl
@@ -160,3 +160,8 @@ button, .li-button
     background: linear-gradient(to bottom, #f5f5f5 0%, #ededed 100%)
   .defaultButton
     background #3b94e8
+
+.view-container.transp
+  .action_bar_button
+    &.highlight
+      background-color transpWhite01
