Fix board aspect for square screens
Closes #1869

--- a/src/styl/board-content.styl
+++ b/src/styl/board-content.styl
@@ -51,6 +51,10 @@
     width var(--board-side-land-tablet)
     margin auto
     margin-left 3vh
+  @media only screen and (min-aspect-ratio: 716/720) and (max-aspect-ratio: 720/716)
+    height 60vw
+    width 60vw
+    margin auto
 
   > svg
     overflow: visible
