Fix number of checks when rewinding game
Closes #2040

--- a/src/styl/game.styl
+++ b/src/styl/game.styl
@@ -268,11 +268,7 @@
   @media only screen and (orientation landscape)
     fluid-type(20px, 35px)
 
-.checkCount
-  font-size 0.8em
-  font-weight bold
-
-.tomb
+.material
   margin-left 6px
   piece
     position initial
