Added Anarcandy chess pieces to match the browser version

--- a/src/styl/chessground-piece.styl
+++ b/src/styl/chessground-piece.styl
@@ -954,3 +954,36 @@
       background-image url('../../images/pieces/libra/wK.svg')
     &.black
       background-image url('../../images/pieces/libra/bK.svg')
+
+/* Anarcandy */
+.anarcandy piece
+  &.pawn
+    &.white
+      background-image url('../../images/pieces/anarcandy/wP.svg')
+    &.black
+      background-image url('../../images/pieces/anarcandy/bP.svg')
+  &.bishop
+    &.white
+      background-image url('../../images/pieces/anarcandy/wB.svg')
+    &.black
+      background-image url('../../images/pieces/anarcandy/bB.svg')
+  &.knight
+    &.white
+      background-image url('../../images/pieces/anarcandy/wN.svg')
+    &.black
+      background-image url('../../images/pieces/anarcandy/bN.svg')
+  &.rook
+    &.white
+      background-image url('../../images/pieces/anarcandy/wR.svg')
+    &.black
+      background-image url('../../images/pieces/anarcandy/bR.svg')
+  &.queen
+    &.white
+      background-image url('../../images/pieces/anarcandy/wQ.svg')
+    &.black
+      background-image url('../../images/pieces/anarcandy/bQ.svg')
+  &.king
+    &.white
+      background-image url('../../images/pieces/anarcandy/wK.svg')
+    &.black
+      background-image url('../../images/pieces/anarcandy/bK.svg')
