--- a/src/styl/settings.styl
+++ b/src/styl/settings.styl
@@ -283,3 +283,7 @@
     background-image url('../../images/pieces/libra/wN.svg')
     @media only screen and (min-width 600px)
       background-image url('../../images/pieces/libra/wP.svg'),url('../../images/pieces/libra/wN.svg'),url('../../images/pieces/libra/wB.svg'),url('../../images/pieces/libra/wR.svg'),url('../../images/pieces/libra/wQ.svg'),url('../../images/pieces/libra/wK.svg')
+  &.anarcandy
+    background-image url('../../images/pieces/anarcandy/wN.svg')
+    @media only screen and (min-width 600px)
+      background-image url('../../images/pieces/anarcandy/wP.svg'),url('../../images/pieces/anarcandy/wN.svg'),url('../../images/pieces/anarcandy/wB.svg'),url('../../images/pieces/anarcandy/wR.svg'),url('../../images/pieces/anarcandy/wQ.svg'),url('../../images/pieces/anarcandy/wK.svg')
